--- a/Client/nuget.config
+++ b/Client/nuget.config
@@ -5,5 +5,10 @@
     <add key="github" value="https://nuget.pkg.github.com/igormatos02/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
-  
+  <packageSourceCredentials>
+    <github>
+      <add key="Username" value="igormatos02" />
+      <add key="ClearTextPassword" value="${{ dev.Password }}" />
+    </github>
+  </packageSourceCredentials>
 </configuration>
