--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build with dotnet
         run: |
             dotnet nuget add source https://nuget.pkg.github.com/igormatdssdos02/index.json --store-password-in-clear-text --name "github" --username igormatos02 --password ${{ secrets.GITHUB_TOKEN }} 
-            dotnet restore blazor-basic-swa.sln
+            dotnet restore -s c:\packages\mypackages
             dotnet build --configuration Release
 
       - name: dotnet publish
