--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -23,8 +23,11 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
-
+        run: |
+         dotnet nuget add source https://nuget.pkg.github.com/igormatdssdos02/index.json --store-password-in-clear-text --name "github" --username igormatos02 --password ${{env.Password}} 
+         dotnet build --configuration Release
+         env:
+              Password: ${{ secrets.GITHUB_TOKEN }}
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
