--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -8,7 +8,8 @@ on:
     branches:
       - main
   workflow_dispatch:
-
+env:
+   NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 jobs:
   build:
     runs-on: windows-latest
@@ -24,10 +25,9 @@ jobs:
 
       - name: Build with dotnet
         run: |
-         dotnet nuget add source https://nuget.pkg.github.com/igormatdssdos02/index.json --store-password-in-clear-text --name "github" --username igormatos02 --password ${{env.Password}} 
+         dotnet nuget add source https://nuget.pkg.github.com/igormatdssdos02/index.json --store-password-in-clear-text --name "github" --username igormatos02 --password ${{secrets.GITHUB_TOKEN}} 
          dotnet build --configuration Release
-         env:
-              Password: ${{ secrets.GITHUB_TOKEN }}
+         
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
