--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -25,9 +25,8 @@ jobs:
 
       - name: Build with dotnet
         run: |
-         nuget sources add -name "github" -Source https://nuget.pkg.github.com/igormatos02/index.json -StorePasswordInClearText -Username igormatos02 -Password ${{secrets.GITHUB_TOKEN}} 
-         dotnet nuget add source https://nuget.pkg.github.com/igormatdssdos02/index.json --store-password-in-clear-text --name "github2" --username igormatos02 --password ${{secrets.GITHUB_TOKEN}} 
-         dotnet nuget add source https://api.nuget.org/v3/index.json  --name "nugetorg" 
+         dotnet nuget add source https://nuget.pkg.github.com/igormatdssdos02/index.json --store-password-in-clear-text --name "github" --username igormatos02 --password ${{secrets.GITHUB_TOKEN}} 
+         dotnet restore --interactive
          dotnet build --configuration Release
          
       - name: dotnet publish
