--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: restore package
         run: |
-            nuget sources add -name "private-packages" -Source https://nuget.pkg.github.com/yanjingzhu/index.json -StorePasswordInClearText -Username yanjingzhu -Password ${env:Password1}
+            nuget sources add -name "private-packages" -Source https://nuget.pkg.github.com/igormatdssdos02/index.json -StorePasswordInClearText -Username igormatos02 -Password ${env:Password1}
             dotnet restore 
             env:
                 Password1: ${{ secrets.GITHUB_TOKEN }}
