--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build with dotnet
         run: |
          dotnet nuget add source https://nuget.pkg.github.com/igormatdssdos02/index.json --store-password-in-clear-text --name "github" --username igormatos02 --password ${{secrets.GITHUB_TOKEN}} 
-         dotnet build --self-contained true --configuration Release 
+         dotnet build --configuration Release 
          
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
