--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -8,13 +8,22 @@ on:
     branches:
       - main
   workflow_dispatch:
-env:
-   NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
 jobs:
   build:
     runs-on: windows-latest
-
+    env:
+     API_KEY: ${{secrets.API_KEY}}
+     NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
     steps:
+
+      - name: Print the input name to STDOUT 1
+        run: echo The username is ${{ secrets.API_KEY }}
+      - name: Print the input name to STDOUT 2
+        run: echo The username is  ${{secrets.GITHUB_TOKEN}}
+      - name: Print the input name to STDOUT 3 
+        run: echo The username is  ${{env.API_KEY}}
+
       - uses: actions/checkout@v2
 
       - name: Set up .NET Core
