--- a/.github/workflows/main_mylayersui2.yml
+++ b/.github/workflows/main_mylayersui2.yml
@@ -25,7 +25,8 @@ jobs:
         run: echo The username is  ${{env.API_KEY}}
 
       - uses: actions/checkout@v2
-
+        with:
+         token: ${{secrets.GITHUB_TOKEN}}
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
