--- a/Client/nuget.config
+++ b/Client/nuget.config
@@ -8,7 +8,7 @@
   <packageSourceCredentials>
     <github>
       <add key="Username" value="igormatos02" />
-      <add key="ClearTextPassword" value="${ env:NUGET_AUTH_TOKEN }" />
+      <add key="ClearTextPassword" value="${ env.NUGET_AUTH_TOKEN }" />
     </github>
   </packageSourceCredentials>
 </configuration>
