--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="client.mylayersapi" Version="1.0.8" />
-    <PackageReference Include="clientlib.mylayersapi" Version="1.0.8" />
-    <PackageReference Include="common.sismo" Version="1.0.8" />
+    <PackageReference Include="apiclient.mylayersapi" Version="1.0.12" />
+    <PackageReference Include="clientlib.mylayersapi" Version="1.0.12" />
+    <PackageReference Include="common.sismo" Version="1.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.3" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0-preview.1.21102.12" />
+    <PackageReference Include="Radzen.Blazor" Version="3.11.3" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
